--- a/hotelbooking.html
+++ b/hotelbooking.html
@@ -229,7 +229,7 @@
                            <div class="modal-dialog">
                               <div class="modal-content">
                                   <div class="modal-header">
-                                      <h2>Your Bill Summary</h2>
+                                      <h2>Booking Summary</h2>
                                       <button class="btn-close" data-bs-dismiss="modal"></button>
                                   </div>
                                   <div class="modal-body">
